proj1/tests/correct/for_base.py
for i in (1, 2, 3, 4):
	print i
	print i + 1

for i in 1, 2, 3, 4:
	print i; print i + 1

for i in [1, 2, 3]: print i
