proj1/tests/error/return_error.py
for x in (1, 3):
	return 2
